# TSBK07

./: .tags  CMakeLists.txt
common/: VectorUtils3.h
common++/: GL_utilities.c  LoadTGA.c  LoadTGA.h  VectorUtils3.c  VectorUtils3.h  loadobj.c
common++/Linux/: MicroGlut.c
lab1/: lab1-1  lab1-1.c  lab1-1.frag  lab1-2  lab1-2.c  lab1-3  lab1-3.c  lab1-4  lab1-4.c  lab1-4.frag  lab1-5  lab1-5.c  lab1-5.frag  lab1-5.vert  lab1-6  lab1-6.c  lab1-6.frag  lab1-6.vert  makefile  report.md
lab2/: lab2-1  lab2-1-procedural3d  lab2-1-procedural3d.c  lab2-1-procedural3d.frag  lab2-1-procedural3d.vert  lab2-1.c  lab2-1.frag  lab2-1.vert  lab2-2  lab2-2.c  lab2-2.frag  lab2-2.vert  lab2-3  lab2-3.c  lab2-3.frag  lab2-3.vert  lab2-4  lab2-4.c  lab2-4.frag  lab2-4.vert  lab2-5  lab2-5.c  lab2-5.frag  lab2-5.vert  lab2-6  lab2-6.c  lab2-6.frag  lab2-6.vert  lab2-7  lab2-7.c  lab2-7.frag  lab2-7.vert  makefile  report.md
lab3/: lab3-1  lab3-1.c  lab3-1.frag  lab3-2  lab3-2.c  lab3-3  lab3-3.c  lab3-3.frag  lab3-3.vert  lab3-4  lab3-4.c  lab3-4.frag  lab3-5  lab3-5.c  lab3-5.frag  makefile  report.md
lab3/src/: camera3-3.c  helpers3-4.c  helpers3-5.c  lights3-4.c  skybox3-3.c  skybox3-4.c  skybox3-5.c  static3-3.c  static3-4.c  static3-5.c  windmill3-3.c  windmill3-4.c  windmill3-5.c
lab4/: report.md
lab4/_old/: lab4-1  lab4-1.c  lab4-2  lab4-2.c  lab4-3  lab4-3.c  terrain4-3.frag  terrain4-3.vert
lab4/_old/media/: heightmap.tga  texture.tga
lab4/_old/src/: camera4-2.c  lights4-3.c  terrain4-2.c  terrain4-3.c
lab4/lab4-3/: lab  lab.cxx  makefile
lab4/lab4-3/media/Tree/: tree.tga
lab4/lab4-3/src/: helpers.c  lab.frag  lights.c  material.c  static.c  terrain.c  windmill.c
lab4/lab4-4/: lab  lab.cxx
lab4/lab4-4/media/Tree/: ground.tga
lab4/lab4-4/src/: lab.frag  skybox.c  static.cxx  terrain.c  windmill.c
lab4/lab4-5/: lab  lab.cxx  makefile
lab4/lab4-5/media/Hestia/: [texture]Hestia_Face.tga
lab4/lab4-5/media/Terrain/: i-fft-terrain.tga
lab4/lab4-5/media/Terrain2/: dry.tga  level_0.tga  level_1.tga  level_4.tga  rock.tga  sea.tga  snow.tga
lab4/lab4-5/src/: camera.c  helpers.c  lights.c  material.c  terrain.c
project/: gmon.out  main  makefile  membership_functions.ipynb  project.md
project/.ipynb_checkpoints/: membership_functions-checkpoint.ipynb
project/media/explosion/: fire.tga
project/media/random_terrain/: grass.tga  heightmap.tga  level_0.tga  level_1.tga  level_2.tga  level_3.tga  level_4.tga
project/media/tank/: body_texture.tga
project/media/terrain/: heightmap_original.tga  heightmap_smooth.tga  level_0 (copia).tga  level_2.tga  rock-grass.tga  sand.tga  water.tga
project/media/tree/: pine.tga
project/old/: lab  lab.cxx
project/old/CallMeAl/: CallMeALDemo.c  CallMeALDemoPlus.c
project/old/CallMeAl/sounds/: about.rtf
project/old/media/Terrain2/: level_3.tga
project/old/media/windmill/: windmill-walls.mtl
project/old/src/: lab.frag  skybox.c  static.cxx  windmill.c
project/report/: membership_functions.ipynb  report.md
project/src/: entities.cpp  entities.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  graphics.cpp  graphics.hpp  helpers.cpp  helpers.hpp  interface.cpp  interface.hpp  lab.frag  lab.vert  main.cpp  random.cpp  random.hpp
