cmake_minimum_required(VERSION 3.8)
project(CG_Labs)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        common++/Linux/MicroGlut.c
        common++/Linux/MicroGlut.h
        common++/GL_utilities.c
        common++/GL_utilities.h
        common++/loadobj.c
        common++/loadobj.h
        common++/LoadTGA.c
        common++/LoadTGA.h
        common++/VectorUtils3.c
        common++/VectorUtils3.h
        common++/zpr.c
        common++/zpr.h
        lab1/lab1-1.c
        lab1/lab1-2.c
        lab1/lab1-3.c
        lab1/lab1-4.c
        lab1/lab1-5.c
        lab1/lab1-6.c
        lab2/lab2-1-procedural3d.c
        lab2/lab2-1.c
        lab2/lab2-2.c
        lab2/lab2-3.c
        lab2/lab2-4.c
        lab2/lab2-5.c
        lab2/lab2-6.c
        lab2/lab2-7.c
        lab3/src/camera3-3.c
        lab3/src/camera3-4.c
        lab3/src/camera3-5.c
        lab3/src/helpers3-3.c
        lab3/src/helpers3-4.c
        lab3/src/helpers3-5.c
        lab3/src/lights3-4.c
        lab3/src/lights3-5.c
        lab3/src/skybox3-3.c
        lab3/src/skybox3-4.c
        lab3/src/skybox3-5.c
        lab3/src/static3-3.c
        lab3/src/static3-4.c
        lab3/src/static3-5.c
        lab3/src/windmill3-3.c
        lab3/src/windmill3-4.c
        lab3/src/windmill3-5.c
        lab3/lab3-1.c
        lab3/lab3-2.c
        lab3/lab3-3.c
        lab3/lab3-4.c
        lab3/lab3-5.c
        lab4/_old/src/camera4-2.c
        lab4/_old/src/camera4-3.c
        lab4/_old/src/lights4-3.c
        lab4/_old/src/material4-3.c
        lab4/_old/src/terrain4-2.c
        lab4/_old/src/terrain4-3.c
        lab4/_old/lab4-1.c
        lab4/_old/lab4-2.c
        lab4/_old/lab4-3.c
        lab4/lab4-3/src/camera.c
        lab4/lab4-3/src/helpers.c
        lab4/lab4-3/src/lights.c
        lab4/lab4-3/src/material.c
        lab4/lab4-3/src/skybox.c
        lab4/lab4-3/src/static.c
        lab4/lab4-3/src/terrain.c
        lab4/lab4-3/src/windmill.c
        lab4/lab4-3/lab.cxx
        lab4/lab4-4/src/camera.c
        lab4/lab4-4/src/helpers.c
        lab4/lab4-4/src/lights.c
        lab4/lab4-4/src/material.c
        lab4/lab4-4/src/skybox.c
        lab4/lab4-4/src/static.cxx
        lab4/lab4-4/src/terrain.c
        lab4/lab4-4/src/windmill.c
        lab4/lab4-4/lab.cxx
        lab4/lab4-5/src/camera.c
        lab4/lab4-5/src/helpers.c
        lab4/lab4-5/src/lights.c
        lab4/lab4-5/src/material.c
        lab4/lab4-5/src/skybox.c
        lab4/lab4-5/src/static.cxx
        lab4/lab4-5/src/terrain.c
        lab4/lab4-5/src/windmill.c
        lab4/lab4-5/lab.cxx
        lab4/src/camera4-3.c
        lab4/src/lights4-3.c
        lab4/src/material4-3.c
        lab4/src/terrain4-3.c
        project/old/CallMeAl/openal-soft/Alc/backends/alsa.c
        project/old/CallMeAl/openal-soft/Alc/backends/base.c
        project/old/CallMeAl/openal-soft/Alc/backends/base.h
        project/old/CallMeAl/openal-soft/Alc/backends/coreaudio.c
        project/old/CallMeAl/openal-soft/Alc/backends/dsound.c
        project/old/CallMeAl/openal-soft/Alc/backends/jack.c
        project/old/CallMeAl/openal-soft/Alc/backends/loopback.c
        project/old/CallMeAl/openal-soft/Alc/backends/mmdevapi.c
        project/old/CallMeAl/openal-soft/Alc/backends/null.c
        project/old/CallMeAl/openal-soft/Alc/backends/opensl.c
        project/old/CallMeAl/openal-soft/Alc/backends/oss.c
        project/old/CallMeAl/openal-soft/Alc/backends/portaudio.c
        project/old/CallMeAl/openal-soft/Alc/backends/pulseaudio.c
        project/old/CallMeAl/openal-soft/Alc/backends/qsa.c
        project/old/CallMeAl/openal-soft/Alc/backends/sndio.c
        project/old/CallMeAl/openal-soft/Alc/backends/solaris.c
        project/old/CallMeAl/openal-soft/Alc/backends/wave.c
        project/old/CallMeAl/openal-soft/Alc/backends/winmm.c
        project/old/CallMeAl/openal-soft/Alc/effects/chorus.c
        project/old/CallMeAl/openal-soft/Alc/effects/compressor.c
        project/old/CallMeAl/openal-soft/Alc/effects/dedicated.c
        project/old/CallMeAl/openal-soft/Alc/effects/distortion.c
        project/old/CallMeAl/openal-soft/Alc/effects/echo.c
        project/old/CallMeAl/openal-soft/Alc/effects/equalizer.c
        project/old/CallMeAl/openal-soft/Alc/effects/flanger.c
        project/old/CallMeAl/openal-soft/Alc/effects/modulator.c
        project/old/CallMeAl/openal-soft/Alc/effects/null.c
        project/old/CallMeAl/openal-soft/Alc/effects/reverb.c
        project/old/CallMeAl/openal-soft/Alc/ALc.c
        project/old/CallMeAl/openal-soft/Alc/alcConfig.c
        project/old/CallMeAl/openal-soft/Alc/alcRing.c
        project/old/CallMeAl/openal-soft/Alc/alstring.h
        project/old/CallMeAl/openal-soft/Alc/ALu.c
        project/old/CallMeAl/openal-soft/Alc/ambdec.c
        project/old/CallMeAl/openal-soft/Alc/ambdec.h
        project/old/CallMeAl/openal-soft/Alc/bformatdec.c
        project/old/CallMeAl/openal-soft/Alc/bformatdec.h
        project/old/CallMeAl/openal-soft/Alc/bs2b.c
        project/old/CallMeAl/openal-soft/Alc/bsinc.c
        project/old/CallMeAl/openal-soft/Alc/compat.h
        project/old/CallMeAl/openal-soft/Alc/converter.c
        project/old/CallMeAl/openal-soft/Alc/converter.h
        project/old/CallMeAl/openal-soft/Alc/helpers.c
        project/old/CallMeAl/openal-soft/Alc/hrtf.c
        project/old/CallMeAl/openal-soft/Alc/hrtf.h
        project/old/CallMeAl/openal-soft/Alc/hrtf_res.h
        project/old/CallMeAl/openal-soft/Alc/mixer.c
        project/old/CallMeAl/openal-soft/Alc/mixer_c.c
        project/old/CallMeAl/openal-soft/Alc/mixer_defs.h
        project/old/CallMeAl/openal-soft/Alc/mixer_inc.c
        project/old/CallMeAl/openal-soft/Alc/mixer_neon.c
        project/old/CallMeAl/openal-soft/Alc/mixer_sse.c
        project/old/CallMeAl/openal-soft/Alc/mixer_sse2.c
        project/old/CallMeAl/openal-soft/Alc/mixer_sse3.c
        project/old/CallMeAl/openal-soft/Alc/mixer_sse41.c
        project/old/CallMeAl/openal-soft/Alc/nfcfilter.c
        project/old/CallMeAl/openal-soft/Alc/nfcfilter.h
        project/old/CallMeAl/openal-soft/Alc/panning.c
        project/old/CallMeAl/openal-soft/Alc/uhjfilter.c
        project/old/CallMeAl/openal-soft/Alc/uhjfilter.h
        project/old/CallMeAl/openal-soft/Alc/vector.h
        project/old/CallMeAl/openal-soft/build/utils/alsoft-config/moc_mainwindow.cpp
        project/old/CallMeAl/openal-soft/build/utils/alsoft-config/ui_mainwindow.h
        project/old/CallMeAl/openal-soft/build/config.h
        project/old/CallMeAl/openal-soft/build/version.h
        project/old/CallMeAl/openal-soft/cmake/CheckFileOffsetBits.c
        project/old/CallMeAl/openal-soft/common/align.h
        project/old/CallMeAl/openal-soft/common/almalloc.c
        project/old/CallMeAl/openal-soft/common/almalloc.h
        project/old/CallMeAl/openal-soft/common/atomic.c
        project/old/CallMeAl/openal-soft/common/atomic.h
        project/old/CallMeAl/openal-soft/common/bool.h
        project/old/CallMeAl/openal-soft/common/math_defs.h
        project/old/CallMeAl/openal-soft/common/rwlock.c
        project/old/CallMeAl/openal-soft/common/rwlock.h
        project/old/CallMeAl/openal-soft/common/static_assert.h
        project/old/CallMeAl/openal-soft/common/threads.c
        project/old/CallMeAl/openal-soft/common/threads.h
        project/old/CallMeAl/openal-soft/common/uintmap.c
        project/old/CallMeAl/openal-soft/common/uintmap.h
        project/old/CallMeAl/openal-soft/examples/common/alhelpers.c
        project/old/CallMeAl/openal-soft/examples/common/alhelpers.h
        project/old/CallMeAl/openal-soft/examples/alffplay.cpp
        project/old/CallMeAl/openal-soft/examples/alhrtf.c
        project/old/CallMeAl/openal-soft/examples/allatency.c
        project/old/CallMeAl/openal-soft/examples/alloopback.c
        project/old/CallMeAl/openal-soft/examples/alreverb.c
        project/old/CallMeAl/openal-soft/examples/alstream.c
        project/old/CallMeAl/openal-soft/examples/altonegen.c
        project/old/CallMeAl/openal-soft/include/AL/al.h
        project/old/CallMeAl/openal-soft/include/AL/alc.h
        project/old/CallMeAl/openal-soft/include/AL/alext.h
        project/old/CallMeAl/openal-soft/include/AL/efx-creative.h
        project/old/CallMeAl/openal-soft/include/AL/efx-presets.h
        project/old/CallMeAl/openal-soft/include/AL/efx.h
        project/old/CallMeAl/openal-soft/OpenAL32/Include/alAuxEffectSlot.h
        project/old/CallMeAl/openal-soft/OpenAL32/Include/alBuffer.h
        project/old/CallMeAl/openal-soft/OpenAL32/Include/alEffect.h
        project/old/CallMeAl/openal-soft/OpenAL32/Include/alError.h
        project/old/CallMeAl/openal-soft/OpenAL32/Include/alFilter.h
        project/old/CallMeAl/openal-soft/OpenAL32/Include/alListener.h
        project/old/CallMeAl/openal-soft/OpenAL32/Include/alMain.h
        project/old/CallMeAl/openal-soft/OpenAL32/Include/alSource.h
        project/old/CallMeAl/openal-soft/OpenAL32/Include/alThunk.h
        project/old/CallMeAl/openal-soft/OpenAL32/Include/alu.h
        project/old/CallMeAl/openal-soft/OpenAL32/Include/bs2b.h
        project/old/CallMeAl/openal-soft/OpenAL32/Include/sample_cvt.h
        project/old/CallMeAl/openal-soft/OpenAL32/alAuxEffectSlot.c
        project/old/CallMeAl/openal-soft/OpenAL32/alBuffer.c
        project/old/CallMeAl/openal-soft/OpenAL32/alEffect.c
        project/old/CallMeAl/openal-soft/OpenAL32/alError.c
        project/old/CallMeAl/openal-soft/OpenAL32/alExtension.c
        project/old/CallMeAl/openal-soft/OpenAL32/alFilter.c
        project/old/CallMeAl/openal-soft/OpenAL32/alListener.c
        project/old/CallMeAl/openal-soft/OpenAL32/alSource.c
        project/old/CallMeAl/openal-soft/OpenAL32/alState.c
        project/old/CallMeAl/openal-soft/OpenAL32/alThunk.c
        project/old/CallMeAl/openal-soft/OpenAL32/sample_cvt.c
        project/old/CallMeAl/openal-soft/utils/alsoft-config/main.cpp
        project/old/CallMeAl/openal-soft/utils/alsoft-config/mainwindow.cpp
        project/old/CallMeAl/openal-soft/utils/alsoft-config/mainwindow.h
        project/old/CallMeAl/openal-soft/utils/bsincgen.c
        project/old/CallMeAl/openal-soft/utils/makehrtf.c
        project/old/CallMeAl/openal-soft/utils/openal-info.c
        project/old/CallMeAl/CallMeAL.c
        project/old/CallMeAl/CallMeAL.h
        project/old/CallMeAl/CallMeALDemo.c
        project/old/CallMeAl/CallMeALDemoPlus.c
        project/old/src/camera.c
        project/old/src/helpers.c
        project/old/src/lights.c
        project/old/src/material.c
        project/old/src/skybox.c
        project/old/src/static.cxx
        project/old/src/terrain.c
        project/old/src/windmill.c
        project/old/lab.cxx
        project/src/entities.cpp
        project/src/entities.hpp
        project/src/entity.cpp
        project/src/entity.hpp
        project/src/game.cpp
        project/src/game.hpp
        project/src/graphics.cpp
        project/src/graphics.hpp
        project/src/helpers.cpp
        project/src/helpers.hpp
        project/src/interface.cpp
        project/src/interface.hpp
        project/src/main.cpp
        project/src/main.hpp
        project/src/random.cpp
        project/src/random.hpp)

add_executable(CG_Labs ${SOURCE_FILES})

set(GL_GLEXT_PROTOTYPES 1)
set(GL3_PROTOTYPES 1)

include_directories(./common++/)
include_directories(./common++/Linux/)
include_directories(/usr/include/GL/)

find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
find_package(GLEW REQUIRED)
include_directories( ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
